[package]
edition.workspace = true
license.workspace = true
name = "katana-gateway-server"
repository.workspace = true
version.workspace = true

[dependencies]
katana-executor.workspace = true
katana-gateway-types.workspace = true
katana-metrics.workspace = true
katana-pool.workspace = true
katana-pool-api.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-provider-api.workspace = true
katana-rpc-api.workspace = true
katana-rpc-server.workspace = true
serde-utils.workspace = true

axum.workspace = true
http.workspace = true
http-body.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "net" ] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
