[package]
edition.workspace = true
license.workspace = true
name = "katana-gateway-types"
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true
katana-rpc-api.workspace = true
katana-rpc-types.workspace = true
serde-utils.workspace = true

base64.workspace = true
cairo-lang-starknet-classes.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true

[dev-dependencies]
katana-utils.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
