[package]
edition.workspace = true
license.workspace = true
name = "katana-gas-price-oracle"
repository.workspace = true
version.workspace = true

[dependencies]
katana-gateway-client.workspace = true
katana-gateway-types.workspace = true
katana-primitives.workspace = true
katana-tasks.workspace = true

alloy-provider = { workspace = true, default-features = false, features = [ "reqwest", "reqwest-rustls-tls" ] }
alloy-rpc-types-eth = { workspace = true, default-features = false }
alloy-transport-http = { workspace = true, features = [ "reqwest" ] }

anyhow.workspace = true
auto_impl.workspace = true
backon.workspace = true
futures.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
async-trait.workspace = true
katana-utils.workspace = true
